[package]
name = "fuse-libc"
version = "0.0.1"
authors = ["John Millikin <john@john-millikin.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "fuse_libc"
path = "fuse-libc.rs"

[dependencies]
fuse = { version = "0.0.1", path = "../fuse" }
libc = { version = "0.2.*" }

[features]
default = ["std"]
std = []
