[package]
name = "fuse-linux"
version = "0.0.1"
authors = ["John Millikin <john@john-millikin.com>"]
license = "Apache-2.0"
edition = "2018"

[lib]
name = "fuse_linux"
path = "fuse-linux.rs"

[dependencies]
fuse = { version = "0.0.1", path = "../fuse" }
linux-errno = { version = "1.0" }
linux-syscall = { version = "1.0" }
