[package]
name = "fuse"
version = "0.0.1"
authors = ["John Millikin <john@john-millikin.com>"]
license = "Apache-2.0"
edition = "2018"

[lib]
name = "fuse"

[target.'cfg(target_os = "freebsd")'.dependencies]
freebsd-errno = { version = "1.0" }

[target.'cfg(target_os = "linux")'.dependencies]
linux-errno = { version = "1.0" }

[features]
default = ["std"]
std = []

syscall_fuse_mount = []

unstable_bmap = []
unstable_ioctl = []
unstable_setattr = []
