[package]
name = "fuse"
version = "0.0.1"
authors = ["John Millikin <john@john-millikin.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "fuse"
path = "fuse.rs"

[target.'cfg(target_os = "freebsd")'.dependencies]
freebsd-errno = { version = "1.0" }

[target.'cfg(target_os = "linux")'.dependencies]
linux-errno = { version = "1.0" }
