[package]
name = "helloworld"
version = "0.0.1"
authors = ["John Millikin <john@john-millikin.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "helloworld"
path = "helloworld.rs"

[dependencies]
fuse = { version = "0.0.1", path = "../../fuse", default-features = false }
libc = "0.2"

[features]
default = ["fuse/libc_fuse_mount", "fuse/std"]
