[package]
name = "helloworld"
version = "0.0.1"
authors = ["John Millikin <john@john-millikin.com>"]
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "helloworld"
path = "helloworld.rs"

[dependencies]
fuse = { version = "0.0.1", path = "../../fuse" }
fuse-libc = { version = "0.0.1", path = "../../fuse-libc" }
libc = "0.2"
