[package]
name = "helloworld_async"
version = "0.0.1"
authors = ["John Millikin <john@john-millikin.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "helloworld_async"
path = "helloworld_async.rs"

[dependencies]
fuse = { version = "0.0.1", path = "../../fuse" }
libc = "0.2"

[features]
default = [
	"fuse/unstable_fuse_getattr",
]
